--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -148,8 +148,12 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebServices\Iwcf_ChuDe.cs" />
     <Compile Include="WebServices\Iwcf_KhoaHoc.cs" />
     <Compile Include="WebServices\Iwcf_NguoiDung.cs" />
+    <Compile Include="WebServices\wcf_ChuDe.svc.cs">
+      <DependentUpon>wcf_ChuDe.svc</DependentUpon>
+    </Compile>
     <Compile Include="WebServices\wcf_KhoaHoc.svc.cs">
       <DependentUpon>wcf_KhoaHoc.svc</DependentUpon>
     </Compile>
@@ -400,6 +404,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Views\Web.config" />
+    <Content Include="WebServices\wcf_ChuDe.svc" />
     <Content Include="WebServices\wcf_KhoaHoc.svc" />
     <Content Include="WebServices\wcf_NguoiDung.svc" />
   </ItemGroup>
