--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -486,7 +486,7 @@
     <Content Include="Views\KhoaHoc\DangKyThamGia.cshtml" />
     <Content Include="Views\HoiDap\_Item_CauHoi.cshtml" />
     <Content Include="Views\KhoaHoc\ThanhVien.cshtml" />
-    <Content Include="Views\NguoiDung\SuaNguoiDung.cshtml" />
+    <Content Include="Views\NguoiDung\Sua.cshtml" />
     <None Include="Properties\PublishProfiles\LCTMoodle.pubxml" />
     <Content Include="Views\KhoaHoc\DanhSachThanhVien.cshtml" />
     <Content Include="Views\ChuDe\QuanLy.cshtml" />
