--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -193,6 +193,7 @@
     <Content Include="Content\scripts\LCT\Form.js" />
     <Content Include="Content\scripts\LCT\jquery.js" />
     <Content Include="Content\scripts\LCT\Khung.js" />
+    <Content Include="Content\scripts\NguoiDung\KichHoatNguoiDung.js" />
     <Content Include="Content\scripts\NguoiDung\SuaNguoiDung.js" />
     <Content Include="Content\scripts\NguoiDung\NguoiDung.js" />
     <Content Include="Content\scripts\Quyen\QuanLy.js" />
@@ -209,6 +210,7 @@
     <Content Include="Content\styles\LCT\Form.css" />
     <Content Include="Content\styles\LCT\Khung.css" />
     <Content Include="Content\styles\LCT\stroke-icons.css" />
+    <Content Include="Content\styles\NguoiDung\KichHoatTaiKhoan.css" />
     <Content Include="Content\styles\NguoiDung\Index.css" />
     <Content Include="Content\styles\Quyen\QuanLy.css" />
     <Content Include="Content\styles\TrangChu\Index.css" />
@@ -497,6 +499,7 @@
     <Content Include="Views\BaiVietTaiLieu\_Form.cshtml" />
     <Content Include="Views\BaiVietTaiLieu\_Item.cshtml" />
     <Content Include="Views\BaiVietTaiLieu\_Khung.cshtml" />
+    <Content Include="Views\NguoiDung\KichHoat.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BUSLayer\BUSLayer.csproj">
