--- a/DAOLayer/DAOLayer.csproj
+++ b/DAOLayer/DAOLayer.csproj
@@ -48,7 +48,7 @@
     <Compile Include="QuyenDAO.cs" />
     <Compile Include="DAO.cs" />
     <Compile Include="CotDiemDAO.cs" />
-    <Compile Include="GiaoTrinhDAO.cs" />
+    <Compile Include="ChuongTrinhDAO.cs" />
     <Compile Include="BaiTapNopDAO.cs" />
     <Compile Include="BaiVietBaiGiangDAO.cs" />
     <Compile Include="BaiVietBaiTapDAO.cs" />
