--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -137,7 +137,7 @@
     <Compile Include="Controllers\BangDiemController.cs" />
     <Compile Include="Controllers\BinhLuanController.cs" />
     <Compile Include="Controllers\ChuDeController.cs" />
-    <Compile Include="Controllers\GiaoTrinhController.cs" />
+    <Compile Include="Controllers\ChuongTrinhController.cs" />
     <Compile Include="Controllers\HoiDapController.cs" />
     <Compile Include="Controllers\KhoaHocController.cs" />
     <Compile Include="Controllers\LCTController.cs" />
@@ -181,9 +181,9 @@
     <Content Include="Content\scripts\ChuDe\Khung.js" />
     <Content Include="Content\images\user-avatar.jpg" />
     <Content Include="Content\scripts\BangDiem\Tao.js" />
-    <Content Include="Content\scripts\GiaoTrinh\Tao.js" />
+    <Content Include="Content\scripts\ChuongTrinh\Tao.js" />
     <Content Include="Content\scripts\HoiDap\Index.js" />
-    <Content Include="Content\scripts\GiaoTrinh\Index.js" />
+    <Content Include="Content\scripts\ChuongTrinh\Index.js" />
     <Content Include="Content\scripts\HoiDap\XemCauHoi.js" />
     <Content Include="Content\scripts\HoiDap\TaoCauHoi.js" />
     <Content Include="Content\scripts\KhoaHoc\DanhSachThanhVien.js" />
@@ -198,7 +198,7 @@
     <Content Include="Content\scripts\Quyen\QuanLy.js" />
     <Content Include="Content\styles\BinhLuan\Khung.css" />
     <Content Include="Content\styles\BangDiem\Tao.css" />
-    <Content Include="Content\styles\GiaoTrinh\Index.css" />
+    <Content Include="Content\styles\ChuongTrinh\Index.css" />
     <Content Include="Content\styles\HoiDap\XemCauHoi.css" />
     <Content Include="Content\styles\HoiDap\Index.css" />
     <Content Include="Content\styles\KhoaHoc\DanhSachThanhVien.css" />
@@ -460,8 +460,8 @@
     <Content Include="Views\BaiTapNop\_DanhSachNop.cshtml" />
     <Content Include="Views\BaiTapNop\_Khung.cshtml" />
     <Content Include="Views\HoiDap\TaoCauHoi.cshtml" />
-    <Content Include="Views\GiaoTrinh\Index.cshtml" />
-    <Content Include="Views\GiaoTrinh\_Item_Tao.cshtml" />
+    <Content Include="Views\ChuongTrinh\Index.cshtml" />
+    <Content Include="Views\ChuongTrinh\_Item_Tao.cshtml" />
     <Content Include="Views\BaiVietDienDan\_Form.cshtml" />
     <Content Include="Views\BangDiem\Tao.cshtml" />
     <Content Include="Views\BangDiem\CotDiem\_Item_Tao.cshtml" />
