--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -463,10 +463,10 @@
     <Content Include="Views\BaiTapNop\_Khung.cshtml" />
     <Content Include="Views\HoiDap\TaoCauHoi.cshtml" />
     <Content Include="Views\ChuongTrinh\Index.cshtml" />
-    <Content Include="Views\ChuongTrinh\_Item_Tao.cshtml" />
+    <Content Include="Views\ChuongTrinh\_Item.cshtml" />
     <Content Include="Views\BaiVietDienDan\_Form.cshtml" />
     <Content Include="Views\BangDiem\Tao.cshtml" />
-    <Content Include="Views\BangDiem\CotDiem\_Item_Tao.cshtml" />
+    <Content Include="Views\BangDiem\_Item.cshtml" />
     <Content Include="Views\BaiVietBaiGiang\_Form.cshtml" />
     <Content Include="Views\BaiVietBaiTap\_Form.cshtml" />
     <Content Include="Views\Quyen\QuanLy.cshtml" />
