--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -149,9 +149,14 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebServices\Client_Model\clientmodel_HinhAnh.cs" />
+    <Compile Include="WebServices\Iwcf_CauHoi.cs" />
     <Compile Include="WebServices\Iwcf_ChuDe.cs" />
     <Compile Include="WebServices\Iwcf_KhoaHoc.cs" />
     <Compile Include="WebServices\Iwcf_NguoiDung.cs" />
+    <Compile Include="WebServices\wcf_CauHoi.svc.cs">
+      <DependentUpon>wcf_CauHoi.svc</DependentUpon>
+    </Compile>
     <Compile Include="WebServices\wcf_ChuDe.svc.cs">
       <DependentUpon>wcf_ChuDe.svc</DependentUpon>
     </Compile>
@@ -421,6 +426,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Views\Web.config" />
+    <Content Include="WebServices\wcf_CauHoi.svc" />
     <Content Include="WebServices\wcf_ChuDe.svc" />
     <Content Include="WebServices\wcf_KhoaHoc.svc" />
     <Content Include="WebServices\wcf_NguoiDung.svc" />
