--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -149,6 +149,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LCTHtml\NguoiDungHtml.cs" />
     <Compile Include="WebServices\Iwcf_ChuDe.cs" />
     <Compile Include="WebServices\Iwcf_KhoaHoc.cs" />
     <Compile Include="WebServices\Iwcf_NguoiDung.cs" />
@@ -164,7 +165,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Nhap.sql" />
-    <Content Include="App_Data\Type.sql" />
     <Content Include="Content\fonts\Pe-icon-7-stroke.svg" />
     <Content Include="Content\images\ChuDe\ChuDe.png" />
     <Content Include="Content\images\ChuDe\MacDinh\he-thong.png" />
@@ -491,7 +491,6 @@
     <Content Include="Views\KhoaHoc\QuanLyQuyen.cshtml" />
     <Content Include="Views\KhoaHoc\DangKyThamGia.cshtml" />
     <Content Include="Views\HoiDap\_Item_CauHoi.cshtml" />
-    <Content Include="Views\KhoaHoc\ThanhVien.cshtml" />
     <Content Include="Views\NguoiDung\Sua.cshtml" />
     <None Include="Properties\PublishProfiles\LCTMoodle.pubxml" />
     <Content Include="Views\KhoaHoc\DanhSachThanhVien.cshtml" />
