--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -496,6 +496,7 @@
     <Content Include="Views\Quyen\QuyenHeThong.cshtml" />
     <Content Include="Views\Quyen\QuyenChuDe.cshtml" />
     <Content Include="Views\NguoiDung\_DieuKhoan.cshtml" />
+    <Content Include="Views\BangDiem\_Form.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BUSLayer\BUSLayer.csproj">
