--- a/BUSLayer/BUSLayer.csproj
+++ b/BUSLayer/BUSLayer.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaiVietTaiLieuBUS.cs" />
-    <Compile Include="GiaTriHanhDongBUS.cs" />
+    <Compile Include="GiaTriHoatDongBUS.cs" />
     <Compile Include="HoatDongBUS.cs" />
     <Compile Include="TraLoi_DiemBUS.cs" />
     <Compile Include="CauHoi_DiemBUS.cs" />
