--- a/DTOLayer/DTOLayer.csproj
+++ b/DTOLayer/DTOLayer.csproj
@@ -44,6 +44,7 @@
     <Compile Include="HoatDongDTO.cs" />
     <Compile Include="BaiVietTaiLieuDTO.cs" />
     <Compile Include="BangCapNhat.cs" />
+    <Compile Include="TinNhanDTO.cs" />
     <Compile Include="TraLoi_DiemDTO.cs" />
     <Compile Include="CauHoi_DiemDTO.cs" />
     <Compile Include="CotDiem_NguoiDungDTO.cs" />
